<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/colorPrimary"
    android:id="@+id/login_page">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/back_icon"
            android:layout_marginStart="22dp"
            android:layout_marginTop="14dp"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:text="@string/welcome_back"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/colorTextWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/login_to_get_started"
                android:fontFamily="@font/seg_ui_semibold"
                android:textColor="@color/colorTextWhite"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background"
        android:elevation="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="@string/login"
            android:textColor="@color/colorTextBlack"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/user_icon"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/someone_gmail_com"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/lock_icon"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <CheckBox
                android:id="@+id/rememberMeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/colorBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:minHeight="48dp"
                android:text="@string/remember_me"
                android:textColor="@color/colorTextBlack"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:text="@string/need_help"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorButtonText"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/seg_ui_semibold"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorTextBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/register_instead"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>